# intellectual_systems_test

./: README.md  client.py  client_log.txt  pyproject.toml  server.py  server_log.txt  start.py
