[tool.poetry]
name = "intellectual-systems-test"
version = "0.1.0"
description = ""
authors = ["Dauletkhan Assanov <ab.dauletkhan@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.10.14"
asyncio = "^3.4.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
